Try to fix vertical overflow

--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ body {
   background-color: var(--yellow);
   color: var(--gray-950);
   overflow-x: hidden;
-  overflow-y: hidden;
 }
 
 
@@ -39,12 +38,11 @@ body {
   gap: 24px;
   min-width: 20.4375rem;
   max-width: 24rem;
-  margin: 0 1rem;
+  margin: 1rem;
   background-color: var(--white);
   border: 1px solid black;
   border-radius: 20px;
   padding: 24px;
-  /* margin: auto; */
 }
 
 
@@ -97,4 +95,10 @@ h2.card-title {
 
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+
+
+@media screen and (min-width: 375px) {
+  
 }
